[gd_scene load_steps=8 format=3 uid="uid://bdh74bhco1ccg"]

[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="1_8xjft"]
[ext_resource type="Script" path="res://scripts/uis/AnimatedButton.gd" id="2_itwee"]

[sub_resource type="Animation" id="Animation_hqqcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wld4l"]
resource_name = "click"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_m41qa"]
resource_name = "enter_scene"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 0.3, 3.14),
"update": 0,
"values": [-1280.0, -512.0, 1.0]
}

[sub_resource type="Animation" id="Animation_uin6e"]
resource_name = "select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 3.14),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7u3fm"]
_data = {
"RESET": SubResource("Animation_hqqcx"),
"click": SubResource("Animation_wld4l"),
"enter_scene": SubResource("Animation_m41qa"),
"select": SubResource("Animation_uin6e")
}

[node name="AnimatedButton" type="Button"]
offset_right = 184.0
offset_bottom = 24.0
theme = ExtResource("1_8xjft")
text = "button.test"
script = ExtResource("2_itwee")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7u3fm")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
